fixed bugs and implemented some more components and content handling